--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url(../img/hero-bg.jpg) top center;
+  background: url(../img/story/img4.jpg) top center;
   background-size: cover;
   position: relative;
 }
@@ -502,7 +502,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #about .about-container .background {
   min-height: 300px;
-  background: url(../img/about-img.jpg) center top no-repeat;
+  background: url(../img/story/img9.jpg) center top no-repeat;
   margin-bottom: 10px;
 }
 
